
syntax="proto3";

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "google/protobuf/field_mask.proto";
//import "google/protobuf/timestamp.proto";

package ds_session;

message DsSession{
    string id=1;
    int32 user_id=2;
    optional int32 ip=3;
    // google.protobuf.Timestamp last_login_time=4 ;
    optional string last_login_time=4 ;
}

// Generated according to https://cloud.google.com/apis/design/standard_methods
service DsSessionService {
  rpc ListDsSessions(ListDsSessionsRequest) returns (ListDsSessionsResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/dssessions"
    };
  }

  rpc GetDsSession(GetDsSessionRequest) returns (DsSession) {
    option (google.api.http) = {
      get: "/v1alpha1/{name=dssessions/*}"
    };
  }

  rpc CreateDsSession(CreateDsSessionRequest) returns (DsSession) {
    option (google.api.http) = {
      post: "/v1alpha1/dssessions"
      body: "dssession"
    };
  }

  rpc UpdateDsSession(UpdateDsSessionRequest) returns (DsSession) {
    option (google.api.http) = {
      patch: "/v1alpha1/{dssession.name=dssessions/*}"
      body: "dssession"
    };
  }

  rpc DeleteDsSession(DeleteDsSessionRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1alpha1/{name=dssessions/*}"
    };
  }
}

// message DsSession {
// ! This should be defined elsewhere
// }

message ListDsSessionsRequest {
  // The parent resource name, for example, "shelves/shelf1"
  string parent = 1;

  // The maximum number of items to return.
  int32 page_size = 2;

  // The next_page_token value returned from a previous List request, if any.
  string page_token = 3;
}

message ListDsSessionsResponse {
  // The field name should match the noun "dssession" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated DsSession dssessions = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message GetDsSessionRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message CreateDsSessionRequest {
  // The parent resource name where the dssession is to be created.
  string parent = 1;

  // The dssession id to use for this dssession.
  string dssession_id = 2;

  // The dssession resource to create.
  // The field name should match the Noun in the method name.
  DsSession dssession = 3;
}

message UpdateDsSessionRequest {
  // The dssession resource which replaces the resource on the server.
  DsSession dssession = 1;

  // The update mask applies to the resource. For the `FieldMask` definition,
  // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#fieldmask
   google.protobuf.FieldMask update_mask = 2;
}

message DeleteDsSessionRequest {
  // The resource name of the dssession to be deleted.
  string name = 1;
}
