syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

package ds_dq_rule;


message DsDqRuleBean {

     int32 id=1 ;
     optional string name=2 ;
     optional int32 type=3 ;
     optional int32 user_id= 4;
     optional string create_time= 5;
     optional string update_time= 6;
}


// Generated according to https://cloud.google.com/apis/design/standard_methods
service DsDqRuleBeanService {
  rpc ListDsDqRuleBeans(ListDsDqRuleBeansRequest) returns (ListDsDqRuleBeansResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/DsDqRuleBeans"
    };
  }

  rpc GetDsDqRuleBean(GetDsDqRuleBeanRequest) returns (DsDqRuleBean) {
    option (google.api.http) = {
      get: "/v1alpha1/{name=DsDqRuleBeans/*}"
    };
  }

  rpc CreateDsDqRuleBean(CreateDsDqRuleBeanRequest) returns (DsDqRuleBean) {
    option (google.api.http) = {
      post: "/v1alpha1/DsDqRuleBeans"
      body: "DsDqRuleBean"
    };
  }

  rpc UpdateDsDqRuleBean(UpdateDsDqRuleBeanRequest) returns (DsDqRuleBean) {
    option (google.api.http) = {
      patch: "/v1alpha1/{DsDqRuleBean.name=DsDqRuleBeans/*}"
      body: "DsDqRuleBean"
    };
  }

  rpc DeleteDsDqRuleBean(DeleteDsDqRuleBeanRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1alpha1/{name=DsDqRuleBeans/*}"
    };
  }
}

// message DsDqRuleBean {
// ! This should be defined elsewhere
// }

message ListDsDqRuleBeansRequest {
  // The parent resource name, for example, "shelves/shelf1"
  string parent = 1;

  // The maximum number of items to return.
  int32 page_size = 2;

  // The next_page_token value returned from a previous List request, if any.
  string page_token = 3;
}

message ListDsDqRuleBeansResponse {
  // The field name should match the noun "DsDqRuleBean" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated DsDqRuleBean DsDqRuleBeans = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message GetDsDqRuleBeanRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message CreateDsDqRuleBeanRequest {
  // The parent resource name where the DsDqRuleBean is to be created.
  string parent = 1;

  // The DsDqRuleBean id to use for this DsDqRuleBean.
  string DsDqRuleBean_id = 2;

  // The DsDqRuleBean resource to create.
  // The field name should match the Noun in the method name.
  DsDqRuleBean DsDqRuleBean = 3;
}

message UpdateDsDqRuleBeanRequest {
  // The DsDqRuleBean resource which replaces the resource on the server.
  DsDqRuleBean DsDqRuleBean = 1;

  // The update mask applies to the resource. For the `google.protobuf.FieldMask` definition,
  // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#google.protobuf.FieldMask
  google.protobuf.FieldMask update_mask = 2;
}

message DeleteDsDqRuleBeanRequest {
  // The resource name of the DsDqRuleBean to be deleted.
  string name = 1;
}
